--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <input id="text-input" type="text">
                 <button id="check-btn">Check</button>
             </div>
-            <div class="result-div hidden" id="result">
-                TEST
+            <div class="result-div" id="result">
             </div>
         </main>
         <script src="script.js"></script>
